# ButterflyWatch

./: readme.md
Design/: Enclosure Frozen.f3d  Enclosure Frozen.step  Enclosure Frozen.stl
Firmware/adctest/: CMakeLists.txt
Firmware/blinktest/: CMakeLists.txt  main.c
Firmware/butterflywatch/: CMakeLists.txt  Servo.c  Servo.h  UltrasonicSensor.c  UltrasonicSensor.h
Firmware/buttontest/: main.c
Firmware/debouncetest/: Button.h  main.c
Firmware/dualcoretest/: CMakeLists.txt  main.c
Firmware/neocycletest/: Button.c
Firmware/neotest/: CMakeLists.txt
Firmware/neotest_pio/src/: main.c
Firmware/servospeedtest/: Board.h  main.c
Firmware/servotest/: CMakeLists.txt
Firmware/sleeptest/: CMakeLists.txt
Firmware/timertest/: main.c
Firmware/ultrasonicdualfasttest/: Board.h  main.c  main_archived.c
Firmware/ultrasonicdualtest/: UltrasonicSensor.h  main.c
Firmware/ultrasonictest/: UltrasonicSensor.h  main.c
firmware/adctest/: CMakeLists.txt  main.c
firmware/butterflywatch/: Board.h  Button.h  CMakeLists.txt  main.c
firmware/buttontest/: CMakeLists.txt  main.c
firmware/debouncetest/: Board.h  Button.c  CMakeLists.txt
firmware/neocycletest/: Board.h  Button.h  CMakeLists.txt  main.c
firmware/neotest/: main.c
firmware/neotest_pio/: platformio.ini
firmware/servospeedtest/: Board.h  CMakeLists.txt  Servo.c  main.c
firmware/servotest/: main.c
firmware/servotest/servo/: CMakeLists.txt  servo.c  servo.h
firmware/sleeptest/: main.c
firmware/sleeptest/pico_sleep/: sleep.c
firmware/timertest/: CMakeLists.txt  main.c
firmware/ultrasonicdualfasttest/: Board.h  CMakeLists.txt  UltrasonicSensor.c  main.c  main_fastsingle.c
firmware/ultrasonicdualtest/: CMakeLists.txt  UltrasonicSensor.c  main.c
firmware/ultrasonictest/: Board.h  CMakeLists.txt  UltrasonicSensor.c  UltrasonicSensor.h  main.c
